# hotl-devin-test

./: README.md  pyproject.toml  requirements.txt  setup.py
experiment/: loranorm_experiment.py  pruning_experiment.py  run_pruning.py  test_pruning.py  train_wrn.py  transformer_experiment.py
experiment/attention_pruning/: run_pruning.py
loranorm/: __init__.py  loranorm.py
reference/: train.py
scripts/: verify_install.py
src/: __init__.py  attention_head_pruning.py  loranorm.py  wrn.py
src/improvements/: __init__.py  augmentation.py  dropout.py  stochastic_depth.py
src/pruning/: __init__.py  attention.py  base.py  config.py  head_pruning.py  importance.py  llama.py
tests/: inspect_model.py  new_pruning_method.py  test_attention_pruning.py  test_loranorm.py
