[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hotl-devin-test"
version = "0.1.0"
description = "Attention head pruning implementation"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "transformers",
    "trl",
    "datasets"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
